--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="site-title"><img src="./img/teslasafe-logo-v2.svg" alt="" height="65px"></div>
         <a class="navbar-brand" href="index.html">
-            <span><img src="./img/logo-circle.svg" alt=""></span>
-            <img src="./img/tesla-safe.svg" alt="">
+            <span><img src="./img/logo1.jpg" alt="" style="width: 40px;"></span>
+            <!-- <img src="./img/tesla-safe.svg" alt=""> -->
+            <span>DreamCoin</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
