--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:site_name" content="TeslaSafe" />
-    <meta property="og:title" content="TeslaSafe - Put your investments on auto-pilot!" />
-    <meta property="og:description" content="TeslaSafe - Engineered to be the most deflationary token in the world." />
+    <meta property="og:site_name" content="Dream" />
+    <meta property="og:title" content="Dream - Put your investments on auto-pilot!" />
+    <meta property="og:description" content="Dream - Engineered to be the most deflationary token in the world." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.teslasafe.fi/img/tesla-safe-logo.png" />
     <meta property="og:url" content="https://www.teslasafe.fi/" />
@@ -175,7 +175,7 @@
                 <div class="col-md-6 my-auto pt-4" data-aos="zoom-in-right" data-aos-duration="1500"
                     data-aos-once="ture">
                     <h5>What is TeslaSafe?</h5>
-                    <p class="feature-text pt-2">TeslaSafe is a frictionless, high-yield, auto deflationary crypto<br>
+                    <p class="feature-text pt-2">DreamCoin is a frictionless, high-yield, auto deflationary crypto<br>
                         much like bitcoin on the Binance Smart Chain. A 14%<br> transaction fee rewards holders and
                         another mechanism will<br> burn 40% of the contract. This is a token that could<br> potentially
                         10x, 100x and even 1000x in the near future with<br> the most advanced tokenomics created.</p>
@@ -189,7 +189,7 @@
                     data-aos-once="ture">
                     <h5>Renewable Energy</h5>
                     <p class="feature-text pt-2">Like bitcoin & other cryptocurrencies, long-term renewable<br>
-                        tokenomics is mirrored in one TeslaSafe's core value. Building<br> on this, the leaders of the
+                        tokenomics is mirrored in one Dream's core value. Building<br> on this, the leaders of the
                         protocol aim to execute renewable<br> vision through new ideas & help from the community.
                         Our<br> marketing powers our community & our community powers<br> our marketing.</p>
                 </div>
@@ -202,7 +202,7 @@
                 <div class="col-md-6 my-auto pt-4" data-aos="zoom-in-right" data-aos-duration="1500"
                     data-aos-once="ture">
                     <h5>Binance Smart Chain</h5>
-                    <p class="feature-text pt-2">TeslaSafe is powered by the Binance Smart Chain (BSC). This<br>
+                    <p class="feature-text pt-2">Dream is powered by the Binance Smart Chain (BSC). This<br>
                         blockchain network runs in parallel to the Binance Chain. The<br> speed and low fees of this
                         specific blockchain offers our<br> community the added interoperability and affordability of<br>
                         facilitating investments via MetaMask and other wallets. </p>
@@ -243,7 +243,7 @@
                             </li>
                             <li class="event" id="date" data-date="June 2021" data-aos="fade-up"
                                 data-aos-duration="2000" data-aos-once="ture">
-                                <p>Teslasafe Launch Campaign - Presale & Launch. Tokenomics simulations will be
+                                <p>Dream Launch Campaign - Presale & Launch. Tokenomics simulations will be
                                     integrated and finalized. Frontend & design revamp. <a href="https://ricefarm.fi/"
                                         target="_blank">Rice Farm Dapp</a> begins
                                     development.</p>
@@ -253,7 +253,7 @@
                                 <p>Marketing Campaign Expansion & <a href="https://ricefarm.fi/ifo" target="_blank">Rice
                                         Farm Dapp Presale</a> goes live for launch. Integrate
                                     deflationary mechanisms for <a href="https://ricefarm.fi/" target="_blank">Rice Farm</a>
-                                    & establish Teslasafe Pools & begin formation
+                                    & establish Dream Pools & begin formation
                                     of <a href="https://teslasafe.ricefarm.fi" target="_blank">DEX</a> & AMM.</p>
                             </li>
                             <li class="event" id="date" data-date="August 2021" data-aos="fade-up"
@@ -271,18 +271,18 @@
                                 data-aos-duration="2000" data-aos-once="ture">
                                 <p>Boba design & website finalized. Testnet goes live. Pazz integrated with <a
                                         href="https://ricefarm.fi/" target="_blank">RICE</a> DEX &
-                                    farms are initiated with Teslasafe & <a href="https://ricefarm.fi/"
+                                    farms are initiated with Dream & <a href="https://ricefarm.fi/"
                                         target="_blank">Rice</a>. Superblockchain development begins.</p>
                             </li>
                             <li class="event" id="date" data-date="November 2021" data-aos="fade-up"
                                 data-aos-duration="2000" data-aos-once="ture">
                                 <p>Boba Presale goes live & launch. Integrate with <a href="https://ricefarm.fi/"
-                                        target="_blank">Rice</a>, Teslasafe & PAZZ. Ecosystem
+                                        target="_blank">Rice</a>, Dream & PAZZ. Ecosystem
                                     expansion into a top 7 blockchain. BTCe development begins.</p>
                             </li>
                             <li class="event" id="date" data-date="December 2021" data-aos="fade-up"
                                 data-aos-duration="2000" data-aos-once="ture">
-                                <p>Quad-Token Ecosystem in full swing. Teslasafe, <a href="https://ricefarm.fi/"
+                                <p>Quad-Token Ecosystem in full swing. Dream, <a href="https://ricefarm.fi/"
                                         target="_blank">Rice</a>, Pazz & USDB will aim to get
                                     listed on Major CEX such as Binance. BTCe development expands to ETHe and BNBe. BTCe
                                     integrated into Boba frontend.</p>
@@ -366,7 +366,7 @@
                     <!-- social icons ends here -->
                 </div>
                 <div class="col-md-12 text-center mt-5">
-                    <p class="footer-txt">Bitcoin = Crypto = TeslaSafe = Hyperdeflationary</p>
+                    <p class="footer-txt">Bitcoin = Crypto = Dream = Hyperdeflationary</p>
                     <ul class="justify-content-center footer-link my-4">
                         <li><a href="index.html">HOME</a></li>
                         <li><a target="_blank" href="https://teslasafe.ricefarm.fi/#/swap">INVEST</a></li>
@@ -379,7 +379,7 @@
                                 href="https://bscscan.com/token/0x3504de9e61fdff2fc70f5cc8a6d1ee493434c1aa">CONTRACT</a>
                         </li>
                     </ul>
-                    <p class="footer-txt">Copyright © 2021 TeslaSafe - All Rights Reserved.</p>
+                    <p class="footer-txt">Copyright © 2021 Dream - All Rights Reserved.</p>
                 </div>
             </div>
         </div>
