--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
     <!-- navbar starts here -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-        <div class="site-title"><img src="./img/teslasafe-logo-v2.svg" alt="" height="65px"></div>
+        <div class="site-title"><img src="./img/logo1.jpg" alt="" height="65px"></div>
         <a class="navbar-brand" href="index.html">
             <span><img src="./img/logo1.jpg" alt="" style="width: 40px;"></span>
             <!-- <img src="./img/tesla-safe.svg" alt=""> -->
-            <span>DreamCoin</span>
+            <span>DREAM</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -70,7 +70,7 @@
                     <!-- animated logo starts here -->
                     <div id="logo" class="object d-flex justify-content-center" data-aos="zoom-in-up"
                         data-aos-duration="2000" data-aos-once="ture">
-                        <img src="./img/teslasafe-logo-v2.svg" alt="" height="200px">
+                        <img src="./img/logo1.jpg" alt="" height="200px">
                     </div>
                     <!-- animated logo ends here -->
 
