--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <meta property="og:title" content="Dream - Put your investments on auto-pilot!" />
     <meta property="og:description" content="Dream - Engineered to be the most deflationary token in the world." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.teslasafe.fi/img/tesla-safe-logo.png" />
-    <meta property="og:url" content="https://www.teslasafe.fi/" />
-    <title>TeslaSafe - Put your investments on auto-pilot!</title>
+    <title>Dream - Put your investments on auto-pilot!</title>
     <link rel="icon" href="./img/favicon.svg" type="image/gif" sizes="16x16">
     <!-- Bootstarp css -->
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -70,26 +68,26 @@
                     <!-- animated logo starts here -->
                     <div id="logo" class="object d-flex justify-content-center" data-aos="zoom-in-up"
                         data-aos-duration="2000" data-aos-once="ture">
-                        <img src="./img/logo1.jpg" alt="" height="200px">
+                        <img src="./img/logo2.jpg" alt="" height="200px">
                     </div>
                     <!-- animated logo ends here -->
 
                     <!-- social icons starts here -->
                     <ul class="social-icons d-flex justify-content-center mb-3 pb-3" data-aos="zoom-in"
                         data-aos-duration="3000" data-aos-once="ture">
-                        <li><a target="_blank" href="mailto:team@teslasafe.finance"><img src="./icons/gmail.svg" alt=""
+                        <li><a target="_blank" href=""><img src="./icons/gmail.svg" alt=""
                                     width="27px" class="social-icon"></a></li>
                         <li><a target="_blank" href="https://twitter.com/fuzionchain"><img src="./icons/twitter.svg"
                                     alt="" width="27px" class="social-icon"></a></li>
                         <li><a target="_blank" href="https://www.facebook.com/FuzionChain/"><img
                                     src="./icons/facebook.svg" alt="" width="27px" class="social-icon"></a></li>
-                        <li><a target="_blank" href="https://www.tiktok.com/@teslasafe.fi"><img
+                        <li><a target="_blank" href=""><img
                             src="./icons/tiktok.svg" alt="" width="27px" class="social-icon"></a></li>
                         <li><a target="_blank" href="https://ricefarm.fi/"><img
                             src="./icons/farm.svg" alt="" width="27px" height="30px" class="social-icon"></a></li>
                         <li><a target="_blank" href="https://www.instagram.com/fuzionchain/"><img
                             src="./icons/instagram.svg" alt="" width="27px" class="social-icon"></a></li>
-                        <li><a target="_blank" href="https://www.reddit.com/r/TeslaSafe"><img src="./icons/reddit.svg"
+                        <li><a target="_blank" href="https://www.reddit.com"><img src="./icons/reddit.svg"
                                     alt="" width="27px" class="social-icon"></a></li>
                         <li><a target="_blank" href="https://t.me/fuzionchain"><img src="./icons/telegram.svg" alt=""
                                     width="27px" class="social-icon"></a></li>
@@ -102,8 +100,8 @@
                     <!-- hero buttons starts here -->
                     <div class="d-flex justify-content-center hero-section-btn" data-aos="zoom-in"
                         data-aos-duration="3000" data-aos-once="ture">
-                        <a target="_blank" href="https://teslasafe.ricefarm.fi/#/swap" class="primary-btn mr-1">Buy</a>
-                        <a target="_blank" href="./pdf/TeslaSafe_Audit.pdf" class="primary-btn mr-1 ml-1">Audit</a>
+                        <a target="_blank" href="#" class="primary-btn mr-1">Buy</a>
+                        <a target="_blank" href="#" class="primary-btn mr-1 ml-1">Audit</a>
                         <a target="_blank" href="https://ricefarm.fi/" class="primary-btn mr-1 ml-1">Farm</a>
                         <a target="_blank" href="https://bscscan.com/token/0x3504de9e61fdff2fc70f5cc8a6d1ee493434c1aa"
                             class="primary-btn mr-1 ml-1">Contract</a>
@@ -174,7 +172,7 @@
             <div class="row mt-5">
                 <div class="col-md-6 my-auto pt-4" data-aos="zoom-in-right" data-aos-duration="1500"
                     data-aos-once="ture">
-                    <h5>What is TeslaSafe?</h5>
+                    <h5>What is Dream?</h5>
                     <p class="feature-text pt-2">DreamCoin is a frictionless, high-yield, auto deflationary crypto<br>
                         much like bitcoin on the Binance Smart Chain. A 14%<br> transaction fee rewards holders and
                         another mechanism will<br> burn 40% of the contract. This is a token that could<br> potentially
@@ -254,7 +252,7 @@
                                         Farm Dapp Presale</a> goes live for launch. Integrate
                                     deflationary mechanisms for <a href="https://ricefarm.fi/" target="_blank">Rice Farm</a>
                                     & establish Dream Pools & begin formation
-                                    of <a href="https://teslasafe.ricefarm.fi" target="_blank">DEX</a> & AMM.</p>
+                                    of <a href="#" target="_blank">DEX</a> & AMM.</p>
                             </li>
                             <li class="event" id="date" data-date="August 2021" data-aos="fade-up"
                                 data-aos-duration="2000" data-aos-once="ture">
@@ -344,19 +342,19 @@
                 <div class="col-md-12 d-flex justify-content-center mt-5">
                     <!-- social icons starts here -->
                     <ul class="social-icons d-flex justify-content-center">
-                        <li><a target="_blank" href="mailto:team@teslasafe.finance"><img src="./icons/gmail.svg" alt=""
+                        <li><a target="_blank" href="#"><img src="./icons/gmail.svg" alt=""
                                     width="27px" class="social-icon"></a></li>
                         <li><a target="_blank" href="https://twitter.com/fuzionchain"><img src="./icons/twitter.svg"
                                     alt="" width="27px" class="social-icon"></a></li>
                         <li><a target="_blank" href="https://www.facebook.com/FuzionChain/"><img
                                     src="./icons/facebook.svg" alt="" width="27px" class="social-icon"></a></li>
-                        <li><a target="_blank" href="https://www.tiktok.com/@teslasafe.fi"><img
+                        <li><a target="_blank" href="https://www.tiktok.com"><img
                             src="./icons/tiktok.svg" alt="" width="27px" class="social-icon"></a></li>
                         <li><a target="_blank" href="https://ricefarm.fi/"><img
                             src="./icons/farm.svg" alt="" width="27px" height="30px" class="social-icon"></a></li>
                         <li><a target="_blank" href="https://www.instagram.com/fuzionchain/"><img
                             src="./icons/instagram.svg" alt="" width="27px" class="social-icon"></a></li>
-                        <li><a target="_blank" href="https://www.reddit.com/r/TeslaSafe"><img src="./icons/reddit.svg"
+                        <li><a target="_blank" href="https://www.reddit.com"><img src="./icons/reddit.svg"
                                     alt="" width="27px" class="social-icon"></a></li>
                         <li><a target="_blank" href="https://t.me/fuzionchain"><img src="./icons/telegram.svg" alt=""
                                     width="27px" class="social-icon"></a></li>
@@ -369,7 +367,7 @@
                     <p class="footer-txt">Bitcoin = Crypto = Dream = Hyperdeflationary</p>
                     <ul class="justify-content-center footer-link my-4">
                         <li><a href="index.html">HOME</a></li>
-                        <li><a target="_blank" href="https://teslasafe.ricefarm.fi/#/swap">INVEST</a></li>
+                        <li><a target="_blank" href="#">INVEST</a></li>
                         <li><a target="_blank"
                                 href="https://charts.bogged.finance/?token=0x3504de9e61FDFf2Fc70f5cC8a6D1Ee493434C1Aa">CHARTS</a>
                         </li>
