--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
     <!-- navbar starts here -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-        <div class="site-title"><img src="./img/logo1.jpg" alt="" height="65px"></div>
+        <div class="site-title"><img src="./img/logo11.jpg" alt="" height="65px"></div>
         <a class="navbar-brand" href="index.html">
-            <span><img src="./img/logo1.jpg" alt="" style="width: 40px;"></span>
+            <span><img src="./img/logo11.jpg" alt="" style="width: 40px;"></span>
             <!-- <img src="./img/tesla-safe.svg" alt=""> -->
             <span>DREAM</span>
         </a>
@@ -166,7 +166,8 @@
         <div class="custom-container">
             <div class="row">
                 <div class="col-md-12 text-center" data-aos="zoom-in" data-aos-duration="1500" data-aos-once="ture">
-                    <h2>Hyper-Deflation is on<br> auto-pilot</h2>
+                    <h2>We are going to implement worldwide<br> people's dream</h2>
+                     
                 </div>
             </div>
             <div class="row mt-5">
